# agentic-ai-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  agents.md  index.html  latest_logs.txt  log.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  run_logs.txt  skills.md  test_data.csv
.github/workflows/: ci.yml  cloud-run.yml
agents/: analyst.py  planner.py  recommender.py  root_cause.py  supervisor.py  viz.py
app/: dashboard.py  main.py
artifacts/: temp_nyc_tlc_yellow_trips_2018_subset_1.csv  temp_resources.csv  temp_test.csv
core/: config.py  llm_service.py  logging_utils.py  models.py  run_context.py
src/: App.css  App.tsx  index.css
tests/: test_common_import.py  test_config.py  test_data_loader.py  test_duckdb_store.py  test_logging.py  test_query_engine.py  test_rca_agent.py  test_schema_inference.py
tools/: artifact_writer.py  chart_selector.py  data_loader.py  duckdb_store.py  query_engine.py  schema_inference.py
